# operator-desktop

./: .gitignore  context.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
releases/: Zhivaya-Skazka-Operator_2.0.0_x64-setup.nsis.zip.sig  Zhivaya-Skazka-Operator_2.0.1_x64-setup.nsis.zip.sig  Zhivaya-Skazka-Operator_3.0.0_x64-setup.nsis.zip.sig  Zhivaya-Skazka-Operator_4.0.0_x64-setup.nsis.zip.sig  Zhivaya-Skazka-Operator_4.0.1_x64-setup.nsis.zip.sig  Zhivaya-Skazka-Operator_4.0.2_x64-setup.nsis.zip.sig
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src/app/: AppRouter.module.css  app-router.tsx  app.tsx
src/components/: Updater.module.css  updater.tsx
src/components/layout/: AppShell.module.css  ChatComposer.module.css  ChatDetails.module.css  ChatMain.module.css  ChatSidebar.module.css  FileThumb.tsx  InboxRail.module.css  MobileChatList.module.css  MobileChatView.module.css  SessionHistory.module.css  TypingPreview.module.css  app-shell.tsx  (+10 more)
src/lib/: api.ts  env.ts  fcm.ts  logger.ts  notifications.ts  platform.ts  socket.ts  tauri-bridge.ts
src/pages/: LogsPage.tsx
src/providers/: app-provider.tsx
src/store/: auth.store.ts  inbox.store.ts  navigation.store.ts  notification.store.ts  theme.store.ts  visitors.store.ts
src/styles/: animations.css  global.css  reset.css  tokens.css
src/types/: chat.ts  note.ts  operator.ts  tag.ts  visitor.ts
src/utils/: avatar.ts  format.ts  parse-ua.ts
(+53 files in other folders)
