[package]
name = "operator-desktop"
version = "2.0.0"
description = "Р–РёРІР°СЏ РЎРєР°Р·РєР° вЂ” Р”РµСЃРєС‚РѕРї РѕРїРµСЂР°С‚РѕСЂР° С‡Р°С‚Р°"
authors = ["Zhivaya Skazka"]
edition = "2021"

[lib]
name = "operator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
