[package]
name = "operator-desktop"
version = "2.0.0"
description = "Живая Сказка — Десктоп оператора чата"
authors = ["Zhivaya Skazka"]
edition = "2021"

[lib]
name = "operator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tauri-plugin-updater = "2"
